samples/_failures_safe/1761704803_46762f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7ae4c92.c: In function ‘main’:
./samples/SAFE/__tmp_d7ae4c92.c:147:12: error: missing terminating " character
  147 |     printf("\nDecompressed data
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d7ae4c92.c:147:5: error: expected expression at end of input
  147 |     printf("\nDecompressed data
      |     ^~~~~~
./samples/SAFE/__tmp_d7ae4c92.c:147:5: error: expected declaration or statement at end of input
